# lina

./: .gitignore  Cargo.toml  README.md  x86_64-rust-64-bit-os.json
src/: interrupts.rs  lib.rs  main.rs  os_allocator.rs  os_gdt.rs  os_memory.rs  vga_buffer.rs
src/os_allocator/: bump.rs  fixed_size_content.rs  list.rs
